k3s_cluster/base/private/monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-prometheus
spec:
  type: ClusterIP
  selector:
    app: private-prometheus
  ports:
    - name: web
      protocol: TCP
      port: 4422
      targetPort: 9090
